@@ -18,6 +18,9 @@ Changes in 0.62.4:
   * A user management bug in the repository has been fixed.
     Previously, if you deleted a group followed by the user with the
     same name of the group, an unhandled exception occurred.
+  * Looking up changeset cache entries in the cache database no longer
+    uses exception handling to determine when database entries are
+    invalid or stale.
 
 Changes in 0.62.3:
   * Don't link troves to groups when the branch has changed
